roles/LB/files/iptables/iptables.rules
# Generated by iptables-save v1.6.0 on Tue Mar 20 14:43:40 2018
*filter
:INPUT ACCEPT [5745019:5115790521]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3736431:464404414]
COMMIT
####
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
####Nagios Access
-A INPUT -i eth0 -p tcp -s 192.168.100.100  -j ACCEPT
#### SSH
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#
-A INPUT -i eth1  -p tcp -m multiport --sports 80,443 -j ACCEPT

#### default deny
-A INPUT -j LOG --log-prefix "IPTABLES DENY: "
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited


# Completed on Tue Mar 20 14:43:40 2018
